# globe-art

./: .clangd  .cursorrules  .gitignore  CCVT_ALGORITHM.md  CLAUDE.md  CMakeLists.txt  TODO.md  surprise.cpp  test_cgal.cpp  test_ply.cpp  test_png.cpp  triang_on_sphere.cpp
.cache/clangd/index/: anl_implementation.cpp.A94832CECB9F957F.idx  anl_noise_generator.hpp.0870129F6B623100.idx  anl_noise_generator_test.cpp.98D5A850AE211572.idx  area_calculator.hpp.95AD8505129410D5.idx  area_calculator_test.cpp.B612D6C06782A5BC.idx  centroid_calculator.hpp.4E8EDF65BB3850E5.idx  circulator_iterator.hpp.718FF8BE84721950.idx  directed_arc.hpp.235D64B017F489B8.idx  directed_arc_test.cpp.1DE8C338518C48F6.idx  generate_globe.cpp.98EFD91E789675D4.idx  geometry_viewer.hpp.822E58165589883E.idx  globe_generator.hpp.AA73BEEDEB223A10.idx  handle_circulator_iterator.hpp.BD66DD8C5D8B67AA.idx  handle_iterator.hpp.8A01E0D31727C05B.idx  helpers.hpp.19F448FB8482AB8D.idx  helpers_test.cpp.64BC653BA6530FBC.idx  interval.hpp.DEB82A623D717613.idx  interval_sampler.hpp.2985AC9F642B45DD.idx  interval_test.cpp.F31EFBA47A3EA751.idx  mock_noise_generator.hpp.EDE9C798D475C03E.idx  noise_generator.hpp.CDD2D45375120CCC.idx  point_generator.hpp.A72F0EA4C00E5EA3.idx  points_collection.hpp.5BD6AC1BF9FEA502.idx  random_sphere_point_generator.hpp.E41B9095AD67B2F6.idx  sphere_mesh_generator.hpp.ECB15AAC9C046DCD.idx  sphere_mesh_generator_test.cpp.413A1F3E3155C888.idx  spherical_bounding_box.hpp.FE829795F509E4C4.idx  spherical_bounding_box_sampler.hpp.5678166C58F815CA.idx  spherical_polygon.hpp.169648E22C6BF11D.idx  spherical_polygon_test.cpp.3C1BFB7010570843.idx  types.hpp.BCDD37963DE4A77A.idx  types.hpp.E4F7AE681DC8DD10.idx
docs/: gradient_optimizer_design.md
src/: TODO.txt  generate_globe.cpp  sphere_to_mesh.cpp  sphere_to_ply.cpp  surprise.cpp  test_adaptive_cache.cpp  test_anl.cpp  test_cgal.cpp  test_cgal_sphere.cpp  test_integration_performance.cpp  test_monte_carlo_params.cpp  test_variance_adaptive.cpp  visualize_field.cpp
src/experiments/: test_anl.cpp  test_cgal.cpp  test_cgal_sphere.cpp  test_mesh_capabilities.cpp  test_noise_sphere.cpp  test_ply.cpp  test_qt.cpp  test_spherical_polygon.cpp  test_union.cpp
src/globe/: cgal_types.hpp  globe_generator.cpp  globe_generator.h  globe_generator.hpp  globe_generator.ixx  globe_viewer.cpp  globe_viewer.h  globe_viewer.hpp  interval_sampler_test.cpp  sphere_generator.cpp  sphere_generator.h  sphere_generator_test.cpp  spherical_bounding_box_sampler_test.cpp  types.h  types.hpp
src/globe/cgal/: types.hpp
src/globe/fields/: constant_scalar_field.hpp  constant_scalar_field_test.cpp  density_sampled_integrable_field.hpp  density_sampled_integrable_field_test.cpp  integrable_field.hpp  monte_carlo_integrable_field.hpp  monte_carlo_integrator.hpp  monte_carlo_integrator_test.cpp  noise_field.hpp  noise_field_test.cpp  scalar_field.hpp
src/globe/generators/: mock_point_generator.hpp  mock_sphere_point_generator.hpp  point_generator.hpp  random_point_generator.hpp  random_point_generator_test.cpp  random_sphere_point_generator.hpp  random_sphere_point_generator_test.cpp  sphere_point_generator.hpp  spherical_random_point_generator.hpp  spherical_random_point_generator_test.cpp
src/globe/geometry/: helpers.h  helpers.hpp  helpers_test.cpp
src/globe/geometry_viewer/: geometry_viewer.hpp
src/globe/globe_generator/: area_calculator.hpp  area_calculator_test.cpp  centroid_calculator.hpp  centroid_calculator_test.cpp  directed_arc.hpp  directed_arc_test.cpp  globe_generator.hpp  integration_result.hpp  interval_sampler.hpp  interval_sampler_test.cpp  mass_calculator.hpp  mass_calculator_test.cpp  monte_carlo_integrator.hpp  monte_carlo_integrator_test.cpp  monte_carlo_params.hpp  monte_carlo_result.hpp  monte_carlo_result.hpp.pch  spherical_bounding_box.hpp  spherical_bounding_box_sampler.hpp  spherical_bounding_box_sampler_test.cpp  spherical_bounding_box_test.cpp  spherical_polygon.hpp  spherical_polygon_test.cpp
src/globe/globe_viewer/: globe_viewer.hpp
src/globe/helpers/: ranges.hpp
src/globe/integrable_field/: adaptive_cache_integrable_field.hpp  density_sampled_integrable_field.hpp  density_sampled_integrable_field_test.cpp  grid_sample_integrable_field.hpp  integrable_field.hpp  monte_carlo_integrable_field.hpp  quadtree.hpp  quadtree_test.cpp  variance_adaptive_integrable_field.hpp
src/globe/io/: cgal_helpers.hpp  mesh_builder.hpp  mesh_builder_test.cpp  mesh_exporter.hpp  qt_renderer.hpp  qt_viewer.hpp
src/globe/math/: bounding_box.hpp  bounding_box_sampler.hpp  bounding_box_test.cpp  circular_interval.hpp  circular_interval_test.cpp  interval.hpp  interval_sampler.hpp  interval_sampler_test.cpp  interval_test.cpp
src/globe/noise_generator/: anl_noise_generator.h  anl_noise_generator.hpp  anl_noise_generator_test.cpp  anl_scalar_field.hpp  anl_scalar_field_test.cpp  constant_scalar_field.hpp  interval.hpp  interval_test.cpp  mock_noise_generator.hpp  mock_scalar_field.hpp  noise_generator.cpp  noise_generator.h  noise_generator.hpp  noise_generator_test.cpp  point_iterator.cpp  point_iterator.h  point_iterator.hpp  range.cpp  range.hpp  range_test.cpp  surface_mesh_point_range.cpp  surface_mesh_point_range.h
src/globe/point_generator/: mock_point_generator.h  mock_point_generator.hpp  point_generator.h  point_generator.hpp  random_sphere_point_generator.cpp  random_sphere_point_generator.h  random_sphere_point_generator.hpp
src/globe/points_collection/: handle_circulator_iterator.hpp  handle_iterator.hpp  points_collection.cpp  points_collection.h  points_collection.hpp  points_collection_test.cpp  types.h  types.hpp  voronoi_sphere.hpp
src/globe/random_sphere_point_generator/: random_sphere_point_generator.cpp  random_sphere_point_generator.h
src/globe/sampling/: interval_sampler.hpp  spherical_bounding_box_sampler.hpp  spherical_bounding_box_sampler_test.cpp
src/globe/scalar_field/: constant_scalar_field.hpp  interval.hpp  interval_test.cpp  mock_scalar_field.hpp  noise_field.hpp  scalar_field.hpp
src/globe/spherical/: helpers.hpp  (+7 more)
(+216 files in other folders)
